--- a/deploy/crds/kieapp.1.0.crd.yaml
+++ b/deploy/crds/kieapp.1.0.crd.yaml
@@ -11,11 +11,29 @@ spec:
     singular: kieapp
   scope: Namespaced
   version: v1
+  versions:
+    - name: v1
+      served: true
+      storage: true
   validation:
     openAPIV3Schema:
       required:
         - spec
       properties:
+        apiVersion:
+          description: 'APIVersion defines the versioned schema of this representation
+            of an object. Servers should convert recognized schemas to the latest
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+          type: string
+        kind:
+          description: 'Kind is a string value representing the REST resource this
+            object represents. Servers may infer this from the endpoint the client
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+          type: string
+        metadata:
+          type: object
+        status:
+          type: object
         spec:
           type: object
           required:
