[KIECLOUD-193] Update CSV installModes
Operator CSV installModes should have SingleNamespace support set to true

Signed-off-by: Babak Mozaffari <bmozaffa@redhat.com>

--- a/deploy/catalog_resources/redhat/catalog-source.yaml
+++ b/deploy/catalog_resources/redhat/catalog-source.yaml
@@ -64,7 +64,7 @@ items:
               - type: OwnNamespace
                 supported: true
               - type: SingleNamespace
-                supported: false
+                supported: true
               - type: MultiNamespace
                 supported: false
               - type: AllNamespaces
