add packr requirement to dep toml for builds
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -10,6 +10,7 @@ required = [
   "k8s.io/gengo/args",
   "sigs.k8s.io/controller-tools/pkg/crd/generator",
   "golang.org/x/sync/errgroup",
+  "github.com/gobuffalo/packr/v2/file/resolver",
 ]
 
 [[override]]
