Integration with console-cr-form
Signed-off-by: Babak Mozaffari <bmozaffa@redhat.com>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -63,6 +63,10 @@ required = [
   branch = "master"
 
 [[constraint]]
+  name = "github.com/RHsyseng/console-cr-form"
+  branch = "master"
+
+[[constraint]]
   name = "github.com/operator-framework/operator-sdk"
   # The version rule is used for a specific release and the master branch for in between releases.
   # branch = "master" #osdk_branch_annotation
