--- a/deploy/catalog_resources/community/1.1.0/kiecloud-operator.1.1.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/community/1.1.0/kiecloud-operator.1.1.0.clusterserviceversion.yaml
@@ -29,7 +29,7 @@ spec:
     - automation
     - operator
   version: 1.1.0
-  maturity: beta
+  maturity: stable
   maintainers:
     - name: Red Hat, Inc.
       email: bsig-cloud@redhat.com
