--- a/deploy/catalog_resources/community/1.1.0/kiecloud.1.1.0.package.yaml
+++ b/deploy/catalog_resources/community/1.1.0/kiecloud.1.1.0.package.yaml
@@ -1,5 +1,5 @@
 #! package-manifest: deploy/catalog_resources/community/1.1.0/kiecloud-operator.1.1.0.clusterserviceversion.yaml
 packageName: kiecloud-operator
 channels:
-  - name: beta
+  - name: stable
     currentCSV: kiecloud-operator.1.1.0
