--- a/deploy/catalog_resources/redhat/1.1.0/businessautomation.1.1.0.package.yaml
+++ b/deploy/catalog_resources/redhat/1.1.0/businessautomation.1.1.0.package.yaml
@@ -1,5 +1,5 @@
 #! package-manifest: deploy/catalog_resources/redhat/1.1.0/businessautomation-operator.1.1.0.clusterserviceversion.yaml
 packageName: businessautomation-operator
 channels:
-  - name: beta
+  - name: stable
     currentCSV: businessautomation-operator.1.1.0
