--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -60,11 +60,13 @@ required = [
 
 [[constraint]]
   name = "github.com/RHsyseng/operator-utils"
-  branch = "master"
+  # revision for branch "master"
+  revision = "3725530e9c7aeff1e1c5dee00574200940360370"
 
 [[constraint]]
   name = "github.com/RHsyseng/console-cr-form"
-  branch = "master"
+  # revision for branch "master"
+  revision = "94d671978fdbbf13b02834d6fe6eb6a28a7c6538"
 
 [[constraint]]
   name = "github.com/operator-framework/operator-sdk"
