--- a/deploy/catalog_resources/community/1.1.0/kiecloud-operator.1.1.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/community/1.1.0/kiecloud-operator.1.1.0.clusterserviceversion.yaml
@@ -7,6 +7,7 @@ metadata:
     categories: "Integration & Delivery"
     certified: "false"
     description: Kie Cloud Operator for deployment and management of RHPAM/RHDM environments.
+    repository: https://github.com/kiegroup/kie-cloud-operator
     containerImage: quay.io/kiegroup/kie-cloud-operator:1.1
     createdAt: 2019-01-25T20:48:22Z
     support: Red Hat, Inc.
