Make Operator UI deployment optional so it can be avoided with a flag, if desired
Signed-off-by: Babak Mozaffari <bmozaffa@redhat.com>

--- a/deploy/catalog_resources/community/1.1.0/kiecloud-operator.1.1.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/community/1.1.0/kiecloud-operator.1.1.0.clusterserviceversion.yaml
@@ -183,3 +183,5 @@ spec:
                         valueFrom:
                           fieldRef:
                             fieldPath: metadata.labels['name']
+                      - name: OPERATOR_UI
+                        value: "true"
