--- a/deploy/catalog_resources/redhat/1.1.0/businessautomation-operator.1.1.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/redhat/1.1.0/businessautomation-operator.1.1.0.clusterserviceversion.yaml
@@ -180,3 +180,5 @@ spec:
                         valueFrom:
                           fieldRef:
                             fieldPath: metadata.labels['name']
+                      - name: OPERATOR_UI
+                        value: "true"
