[KIECLOUD-217] - Kie data path standardization
Signed-off-by: Ricardo Zanini <zanini@redhat.com>

--- a/config/common.yaml
+++ b/config/common.yaml
@@ -203,7 +203,7 @@ console:
                     mountPath: "/etc/businesscentral-secret-volume"
                     readOnly: true
                   - name: "[[.ApplicationName]]-[[.Console.Name]]-pvol"
-                    mountPath: "/opt/eap/standalone/data/kie"
+                    mountPath: "/opt/kie/data"
             volumes:
               - name: "[[.ApplicationName]]-[[.Console.Name]]-[[.Constants.KeystoreVolumeSuffix]]"
                 secret:
