--- a/deploy/crds/kieapp.crd.yaml
+++ b/deploy/crds/kieapp.crd.yaml
@@ -605,3 +605,13 @@ spec:
                     replaceRole:
                       type: boolean
                       description: Whether to add to the current roles, or replace the current roles with the mapped ones. Replaces if set to true.
+            upgrades:
+              type: object
+              description: Specify the level of upgrade that should be allowed when an older product version is detected
+              properties:
+                patch:
+                  type: boolean
+                  description: Set false to disable automatic product patch version upgrades, it is enabled by default.
+                minor:
+                  type: boolean
+                  description: Set true to enable automatic product minor version upgrades, it is disabled by default.
