[KIECLOUD-211] - Update Operator to match the templates changes made by RHPAM-2016
Signed-off-by: Filippe Spolti <fspolti@redhat.com>

--- a/config/dbs/mysql.yaml
+++ b/config/dbs/mysql.yaml
@@ -35,7 +35,7 @@ servers:
                     - name: KIE_SERVER_PERSISTENCE_DS
                       value: "java:/jboss/datasources/rhpam"
                     - name: RHPAM_DRIVER
-                      value: "mysql"
+                      value: "mariadb"
                     - name: KIE_SERVER_PERSISTENCE_DIALECT
                       value: "org.hibernate.dialect.MySQL57Dialect"
                     - name: RHPAM_USERNAME
