fix resourceNames across 1.1.x versions
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/deploy/catalog_resources/redhat/1.1.1/businessautomation-operator.1.1.1.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/redhat/1.1.1/businessautomation-operator.1.1.1.clusterserviceversion.yaml
@@ -150,6 +150,7 @@ spec:
             - apiGroups:
                 - apps
               resourceNames:
+                - kie-cloud-operator
                 - business-automation-operator
               resources:
                 - deployments/finalizers
