--- a/deploy/catalog_resources/community/1.1.0/kiecloud-operator.1.1.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/community/1.1.0/kiecloud-operator.1.1.0.clusterserviceversion.yaml
@@ -151,6 +151,7 @@ spec:
                 - apps
               resourceNames:
                 - kie-cloud-operator
+                - business-automation-operator
               resources:
                 - deployments/finalizers
               verbs:
