--- a/deploy/crs/kieapp_rhdm_production-immutable-jms.yaml
+++ b/deploy/crs/kieapp_rhdm_production-immutable-jms.yaml
@@ -13,6 +13,6 @@ spec:
             reference: master
             contextDir: quickstarts/hello-rules/hellorules
         jms:
-          enableKieServerJMSIntegration: true
-          kieServerJmsEnableSignal: true
-          kieServerJmsEnableAudit: true
+          enableIntegration: true
+          enableSignal: true
+          enableAudit: true
