[KIECLOUD-254] Remove jndiName
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

--- a/config/dbs/external.yaml
+++ b/config/dbs/external.yaml
@@ -24,7 +24,7 @@ servers:
                     - name: RHPAM_SERVICE_PORT
                       value: "[[.Database.ExternalConfig.Port]]"
                     - name: RHPAM_JNDI
-                      value: "[[.Database.ExternalConfig.JndiName]]"
+                      value: "java:/jboss/datasources/rhpam"
                     - name: RHPAM_DRIVER
                       value: "[[.Database.ExternalConfig.Driver]]"
                     - name: RHPAM_USERNAME
