--- a/config/envs/rhdm-trial.yaml
+++ b/config/envs/rhdm-trial.yaml
@@ -7,6 +7,11 @@ console:
           spec:
             containers:
               - name: "[[.ApplicationName]]-[[.Console.Name]]"
+                env:
+                  - name: KIE_SERVER_HOST
+                  - name: JGROUPS_PING_PROTOCOL
+                  - name: OPENSHIFT_DNS_PING_SERVICE_NAME
+                  - name: OPENSHIFT_DNS_PING_SERVICE_PORT
                 ports:
                   - name: git-ssh
                     containerPort: 8001
@@ -63,6 +68,7 @@ servers:
               containers:
                 - name: "[[.KieName]]"
                   env:
+                    - name: KIE_SERVER_HOST
                     - name: JGROUPS_PING_PROTOCOL
                     - name: OPENSHIFT_DNS_PING_SERVICE_NAME
                     - name: OPENSHIFT_DNS_PING_SERVICE_PORT
